# flocking

./: .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
cone/: cone.mtl
models/: aquarium.blend
models/aquarium/: aquarium.mtl
models/guppy/: guppy.mtl
shaders/: compute.comp  render.frag  render.vert
src/: boids.rs  canvas.js  components.rs  gpu.rs  index.html  index.tsx  main.rs  physics.rs  systems.rs  wasm.tsx
src/gpu/: buffers.rs  compute_pipeline.rs  render_pipeline.rs
src/tsx/: Interface.tsx
src/wasm/: lattice.rs  lib.rs  settings.rs
src/wasm/boids/: boid.rs  boid_pool.rs  lattice.rs  mod.rs
src/wasm/utils/: vector2d.rs
