[package]
name = "flocking"
version = "0.1.0"
authors = ["Julian Viechter <jviechter@gmail.com>"]
edition = "2018"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.71.0"
itertools = "0.8.2"
legion = "0.2.1"
rand = "0.7.3"
nalgebra = "0.19.0"
ncollide2d = "0.21.0"
nphysics2d = "0.13.1"
nphysics_testbed2d = "0.7.0"
num = "0.2.1"